--- a/src/components/header/Header.module.css
+++ b/src/components/header/Header.module.css
@@ -1,15 +1,15 @@
-.top-header {
+.topHeader {
     grid-area: h;
     background-color: rgba(220, 220, 220, 0.22);
 }
-.top-header img {
+.topHeader img {
     padding-left:  16%;
     width: 80px;
 }
 .logo {
     display: flex;
 }
-.item-header {
+.itemHeader {
     color: #092c4f;
     padding-left: 4px;
 }
