--- a/src/components/navigation/Navigation.module.css
+++ b/src/components/navigation/Navigation.module.css
@@ -1,16 +1,26 @@
 .navBlock {
     background-color: rgba(47, 193, 211, 0.29);
     grid-area: n;
+    display: flex;
+    justify-content: center;
+
 }
-.navBlock ul li {
-    list-style-type: none;
-    line-height: 30px;
-    text-transform: uppercase;
+
+.navItem {
+    line-height: 52px;
+    margin-top: 20px;
 }
-.navBlock ul li a {
+
+
+.navItem a {
     text-decoration: none;
-    color: #14909b;
-    font-size: 20px;
+    text-transform: uppercase;
+    color: #14729b;
+    font-size: 26px;
     font-weight: 500;
-    letter-spacing: 1px;
+    letter-spacing: 5px;
+}
+
+.item a.active {
+    color: rgba(43, 168, 124, 0.78);
 }
