--- a/src/components/dialogs/Dialogs.module.css
+++ b/src/components/dialogs/Dialogs.module.css
@@ -1,25 +1,25 @@
 .dialogs {
+    width: 100%;
     display: flex;
 }
 
 .dialogItems {
-    width: 45%;
-    padding: 20px 0 0 20px;
+    width: 25%;
     line-height: 30px;
 }
 
 .dialogs .dialog {
+    background-color: rgba(0, 139, 139, 0.73);
     font-size: 20px;
     color: #555;
 }
 
 .messages {
-    padding-top: 20px;
-    line-height: 30px;
+    width: 50%;
+    background-color: rgba(0, 139, 139, 0.44);
+    padding: 20px 20px 0 20px;
+
 }
 
-.messages .message {
-    font-size: 20px;
-    color: #555;
-}
+
 
