--- a/src/components/dialogs/Dialogs.module.css
+++ b/src/components/dialogs/Dialogs.module.css
@@ -18,8 +18,27 @@
     width: 50%;
     background-color: rgba(0, 139, 139, 0.44);
     padding: 20px 20px 0 20px;
-
+    /*height: auto;*/
+    /*display: flex;*/
+    /*flex-direction: column;*/
+    /*justify-content: space-between;*/
 }
 
+.blockItem:nth-of-type(even) {
+    width: 100%;
+    display: flex;
+    justify-content: flex-end;
+    display: grid;
+    grid-auto-rows: minmax(min-content, max-content);
+    row-gap: 1px;
+}
+.blockForm {
+    display: flex;
+    margin-top: 2px;
+}
+
+.blockInput textarea {
+    width: 230px;
+}
 
 
