--- a/src/components/users/Users.module.css
+++ b/src/components/users/Users.module.css
@@ -1,9 +1,29 @@
 .blockPageUsers {
     margin: 10px 0 0 10px;
-}
 
+}
+.blockPageUsers .pagination {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+}
 .photoUser {
     width: 50px;
     height: 50px;
     border-radius: 50px;
+}
+.blockPagination {
+    cursor: pointer;
+
+}
+.digitalNormal {
+    font-weight: normal;
+    margin-right: 5px;
+    font-size: 18px;
+    color: slategray;
+}
+.digitalBold {
+    margin-right: 5px;
+    color: crimson;
+    font-size: 20px;
 }
